--- a/firstNotebook.ipynb
+++ b/firstNotebook.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZkj+e20cG0W8K2ho0Q2C7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "sCzwjvpdb3C1"
       },
@@ -49,13 +48,37 @@
         "id": "kk18fkRkcxjw",
         "outputId": "e4bb3b8d-dccc-43ce-aa49-dfadecb9c48c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "print(time.ctime())"
+      ],
+      "metadata": {
+        "id": "2MynwUhOjsV9",
+        "outputId": "4f69f7d5-3b8d-4a6d-be28-e6d8f007db09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mon Mar 13 15:20:48 2023\n"
           ]
         }
       ]
