--- a/firstNotebook.ipynb
+++ b/firstNotebook.ipynb
@@ -62,26 +62,13 @@
     {
       "cell_type": "code",
       "source": [
-        "import time\n",
-        "print(time.ctime())"
+        "print(\"natalie\")"
       ],
       "metadata": {
-        "id": "2MynwUhOjsV9",
-        "outputId": "4f69f7d5-3b8d-4a6d-be28-e6d8f007db09",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "gh9WRno2kPcj"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mon Mar 13 15:20:48 2023\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
