--- a/firstNotebook.ipynb
+++ b/firstNotebook.ipynb
@@ -62,13 +62,67 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"natalie\")"
+        "import time\n",
+        "print(time.ctime())"
       ],
       "metadata": {
-        "id": "gh9WRno2kPcj"
+        "id": "2MynwUhOjsV9",
+        "outputId": "af0fbe7f-4d1b-4679-aa4f-3aa11c05c8f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mon Mar 13 15:24:44 2023\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Yz5kyxvpkypJ"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hGWAWe9Sky_4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hello\");"
+      ],
+      "metadata": {
+        "id": "ba1gUFp9km1K",
+        "outputId": "eeb31cb4-5741-4478-a099-d78f46d005a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ]
     }
   ]
 }
