--- a/firstNotebook.ipynb
+++ b/firstNotebook.ipynb
@@ -39,6 +39,18 @@
     {
       "cell_type": "code",
       "source": [
+        "def add(x, y):\n",
+        "  print(x + y)"
+      ],
+      "metadata": {
+        "id": "wGAwb1IusuNV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(x)"
       ],
       "metadata": {
@@ -72,7 +84,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
