--- a/skyward_trivia.ipynb
+++ b/skyward_trivia.ipynb
@@ -119,13 +119,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UvAz3yb_eVgz",
-        "outputId": "7b2e11bf-f7b9-442f-8be3-a49770db1427"
+        "outputId": "bdaa8976-ff53-4b29-ea5d-816c2b607b40"
       },
       "outputs": [
         {
@@ -139,7 +139,8 @@
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting pysimplevalidate>=0.2.7 (from pyinputplus)\n",
-            "  Downloading PySimpleValidate-0.2.12.tar.gz (22 kB)\n",
+            "\u001b[33m  WARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ProtocolError('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))': /packages/0b/54/8fd99436073dbdbba719e08e1b7e5f3f36a8cc9e518612e1b97e4806d2ce/PySimpleValidate-0.2.12.tar.gz\u001b[0m\u001b[33m\n",
+            "\u001b[0m  Downloading PySimpleValidate-0.2.12.tar.gz (22 kB)\n",
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
@@ -150,13 +151,13 @@
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: pyinputplus, pysimplevalidate, stdiomask\n",
             "  Building wheel for pyinputplus (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyinputplus: filename=PyInputPlus-0.2.12-py3-none-any.whl size=11297 sha256=e0b6314f3b09e68d1d977cb98a46519b5da02f276aa813aa788549c8f6c89725\n",
+            "  Created wheel for pyinputplus: filename=PyInputPlus-0.2.12-py3-none-any.whl size=11297 sha256=d5a92021fbbd053648d35f53075feb1471502a5056009a10c061b21945a4e145\n",
             "  Stored in directory: /root/.cache/pip/wheels/13/ec/a5/f780c8008b74e885aada43369ebf4d350edfd12bb5909ccb23\n",
             "  Building wheel for pysimplevalidate (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pysimplevalidate: filename=PySimpleValidate-0.2.12-py3-none-any.whl size=16176 sha256=5aaeac72b1a4035a3080d34d6f873e4c452105c66553ec0f8fc9b287fbf78633\n",
+            "  Created wheel for pysimplevalidate: filename=PySimpleValidate-0.2.12-py3-none-any.whl size=16176 sha256=c25c8673aa1730887f256107345e9ae8e91808d0ba4c390f61edd7bacaccb743\n",
             "  Stored in directory: /root/.cache/pip/wheels/64/29/c9/2ee861e5b0775e289013b7c7157e0bdcea3a1b844f835b2eb8\n",
             "  Building wheel for stdiomask (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for stdiomask: filename=stdiomask-0.0.6-py3-none-any.whl size=3306 sha256=bc310434ee205981ad19e1da50a3c1f54ecfdca84031783d90d0e2f824ef637d\n",
+            "  Created wheel for stdiomask: filename=stdiomask-0.0.6-py3-none-any.whl size=3306 sha256=81a4d7225e138910e07528ea21e4c6f12a0fc8db811891c60748ec17a31d234e\n",
             "  Stored in directory: /root/.cache/pip/wheels/6c/00/4b/0715696f101d7376f67a83cf3d545feb8c241eeee75b80bb6f\n",
             "Successfully built pyinputplus pysimplevalidate stdiomask\n",
             "Installing collected packages: stdiomask, pysimplevalidate, pyinputplus\n",
